<package>
  <name>dynaMap</name>
  <version>0.0.1</version>
  <description>non-rigid mapping</description>
  <maintainer email="alireza.ahmadi@uni-bonn.de">Alireza Ahmadi</maintainer>
  <license>GPL</license>

  <author>Alireza Ahmadi</author>

  <buildtool_depend>catkin</buildtool_depend> 

  <build_depend>robovision</build_depend>
  <build_depend>glow</build_depend> 
  <build_depend>projection_example</build_depend> 
  
  <run_depend>robovision</run_depend>
  <run_depend>glow</run_depend> 
  <run_depend>projection_example</run_depend> 


  <build_depend>roscpp</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  
</package>
